part4/project/base/broadcasterdep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broadcaster-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: broadcaster
  template:
    metadata:
      labels:
        app: broadcaster
    spec:
      containers:
        - name: broadcaster
          image: PROJECT/IMAGE_BROADCASTER
