part4/project/base/broadcasterrollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: broadcaster-rollout
spec:
  replicas: 1
  selector:
    matchLabels:
      app: broadcaster
  strategy:
    canary:
      steps:
        - setWeight: 100

  template:
    metadata:
      labels:
        app: broadcaster

    spec:
      containers:
        - name: broadcaster
          image: PROJECT/IMAGE_BROADCASTER
